1. JQUERY examples 2. Refactoring

--- a/src/main/resources/static/reg.html
+++ b/src/main/resources/static/reg.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/reg.css" rel="stylesheet">
+    <script src="/js/utils.js"></script>
     <script src="/js/reg.js"></script>
 </head>
 <body>
 <h3>Форма регистрации</h3>
 
 <div class="my_form">
-    <form action="action_page.php">
+    <form action="https://jsonplaceholder.typicode.com/posts" autocomplete="off">
         <label for="fname">Логин</label>
-        <input type="text" id="login" name="login" oninput="checkLogin()" onblur="resumeLogin()">
+        <input type="text" id="login" name="login">
 
         <div id="login_warning" class="login_warning">
             Такой логин уже есть в системе!<br>
